fixed ancestor with overflow hidden

--- a/styles/partials/_navigation.scss
+++ b/styles/partials/_navigation.scss
@@ -8,7 +8,7 @@ body {
   overflow: visible;
 }
 
-body > div#top.grid_1200  {
+body > div.grid_1200 #top {
   overflow: visible !important;
 }
 .nelagala-event {
